--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -158,6 +158,7 @@
                             android:adjustViewBounds="true"
                             android:cropToPadding="true"
                             android:scaleType="fitXY"
+                            android:onClick="addSchoolLaptopCart"
                             app:srcCompat="@drawable/addtocart" />
 
                     </LinearLayout>
