--- a/app/src/main/res/layout/activity_browse.xml
+++ b/app/src/main/res/layout/activity_browse.xml
@@ -20,22 +20,12 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <TextView
-            android:id="@+id/addPromptText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#FFFFFF"
-            android:text="@string/addPrompt"
-            android:textColor="@color/black"
-            android:textSize="16dp"
-            android:padding="20dp"/>
-
 
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_marginVertical="20dp">
+            android:layout_marginBottom ="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -43,6 +33,8 @@
                 android:background="#D2FFFFFF"
                 android:orientation="vertical"
                 android:padding="20dp">
+
+
 
                 <TextView
                     android:id="@+id/schoolLaptopTitle"
@@ -60,6 +52,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:text="@string/schoolLaptopSpecsTitle"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:textSize="16dp" />
 
                 <TextView
@@ -76,20 +70,22 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:text="@string/customizationOptionsText"
-                    android:textSize="16dp" />
+                    android:textSize="16dp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"/>
 
                 <CheckBox
                     android:id="@+id/schoolLaptop_TouchScreenCheckbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="slTouchScreenCheckbox"
+                    android:textColor="@color/black"
                     android:text="@string/schoolLaptop_TouchScreen" />
 
                 <CheckBox
                     android:id="@+id/schoolLaptop_WebcamCheckbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="slWebcamCheckbox"
+                    android:textColor="@color/black"
                     android:text="@string/schoolLaptop_Webcam" />
 
                 <TextView
@@ -97,27 +93,30 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="RAM Configuration"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:textSize="16sp" />
 
                 <RadioGroup
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="10dp">
+                    android:layout_marginVertical="10dp"
+                    android:id="@+id/schoolRAMOptionsRadioGroup">
 
                     <RadioButton
                         android:id="@+id/school6GBRAM"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:checked="true"
-                        android:onClick="slRamClicked"
-                        android:text="6 GB RAM" />
+                        android:textColor="@color/black"
+                        android:text="6 GB RAM + $0.00" />
 
                     <RadioButton
                         android:id="@+id/school8GBRAM"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:onClick="slRamClicked"
-                        android:text="8 GB RAM" />
+                        android:textColor="@color/black"
+                        android:text="8 GB RAM + $200.00" />
 
                 </RadioGroup>
 
@@ -126,6 +125,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Additional Options"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:textSize="16sp" />
 
                 <Switch
@@ -133,13 +134,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="Extended Warranty" />
+                    android:text="Extended Warranty + $350.00"
+                    android:textColor="@color/black"/>
 
                 <Switch
                     android:id="@+id/schoolLaptop_mouse"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Wireless Mouse" />
+                    android:text="Wireless Mouse + $100.00"
+                    android:textColor="@color/black"/>
 
                 <ImageButton
                     android:id="@+id/schoolAddToCart"
@@ -149,9 +152,9 @@
                     android:layout_marginTop="16dp"
                     android:adjustViewBounds="false"
                     android:backgroundTint="#00FF0000"
-                    android:backgroundTintMode="add"
+                    android:backgroundTintMode="src_in"
                     android:cropToPadding="true"
-                    android:onClick="addSchoolLaptopCart"
+                    android:onClick="onClickAddToCartSchool"
                     android:scaleType="fitXY"
                     app:srcCompat="@drawable/addtocart" />
 
@@ -177,6 +180,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:text="@string/workLaptopSpecsTitle"
                     android:textSize="16dp" />
 
@@ -193,6 +198,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:text="@string/customizationOptionsText"
                     android:textSize="16dp" />
 
@@ -200,18 +207,21 @@
                     android:id="@+id/workLaptop_TouchScreenCheckbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:text="@string/workLaptop_TouchScreen" />
 
                 <CheckBox
                     android:id="@+id/workLaptop_WebcamCheckbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:text="@string/workLaptop_Webcam" />
 
                 <CheckBox
                     android:id="@+id/workLaptop_FPSCheckbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:text="@string/workLaptop_FPS" />
 
                 <TextView
@@ -219,9 +229,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="RAM Configuration"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:textSize="16sp" />
 
                 <RadioGroup
+                    android:id="@+id/workRAMOptionsRadioGroup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="10dp">
@@ -230,14 +243,16 @@
                         android:id="@+id/work8GBRAM"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/black"
                         android:checked="true"
-                        android:text="8 GB RAM" />
+                        android:text="8 GB RAM + $0.00" />
 
                     <RadioButton
                         android:id="@+id/work12GBRAM"
                         android:layout_width="match_parent"
+                        android:textColor="@color/black"
                         android:layout_height="wrap_content"
-                        android:text="12 GB RAM" />
+                        android:text="12 GB RAM + $400.00" />
 
                 </RadioGroup>
 
@@ -246,6 +261,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Additional Options"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:textSize="16sp" />
 
                 <Switch
@@ -253,13 +270,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="Extended Warranty" />
+                    android:textColor="@color/black"
+                    android:text="Extended Warranty + $350.00" />
 
                 <Switch
                     android:id="@+id/workLaptop_mouse"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Wireless Mouse" />
+                    android:textColor="@color/black"
+                    android:text="Wireless Mouse + $100.00" />
 
                 <ImageButton
                     android:id="@+id/workAddToCart"
@@ -269,8 +288,9 @@
                     android:layout_marginTop="16dp"
                     android:adjustViewBounds="true"
                     android:backgroundTint="#00FFFFFF"
-                    android:backgroundTintMode="add"
+                    android:backgroundTintMode="src_in"
                     android:cropToPadding="true"
+                    android:onClick="onClickAddToCartWork"
                     android:scaleType="fitXY"
                     app:srcCompat="@drawable/addtocart" />
 
@@ -294,9 +314,11 @@
 
 
                 <TextView
-                    android:id="@+id/workLaptopSpecsTitle2"
+                    android:id="@+id/workLaptopSpecsTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:layout_marginTop="20dp"
                     android:text="@string/gamingLaptopSpecsTitle"
                     android:textSize="16dp" />
@@ -314,6 +336,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:text="@string/customizationOptionsText"
                     android:textSize="16dp" />
 
@@ -321,11 +345,13 @@
                     android:id="@+id/gamingLaptop_WebcamCheckbox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:text="@string/gamingLaptop_Webcam" />
 
                 <CheckBox
                     android:id="@+id/gamingLaptop_4KCheckbox"
                     android:layout_width="match_parent"
+                    android:textColor="@color/black"
                     android:layout_height="wrap_content"
                     android:text="@string/gamingLaptop_4K" />
 
@@ -334,9 +360,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="RAM Configuration"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:textSize="16sp" />
 
                 <RadioGroup
+                    android:id="@+id/gamingRAMOptionsRadioGroup"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginVertical="10dp">
@@ -345,14 +374,16 @@
                         android:id="@+id/gaming16GBRAM"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/black"
                         android:checked="true"
-                        android:text="16 GB RAM" />
+                        android:text="16 GB RAM + $0.00" />
 
                     <RadioButton
                         android:id="@+id/gaming24GBRAM"
                         android:layout_width="match_parent"
+                        android:textColor="@color/black"
                         android:layout_height="wrap_content"
-                        android:text="24 GB RAM" />
+                        android:text="24 GB RAM + $600.00" />
 
                 </RadioGroup>
 
@@ -361,28 +392,45 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Additional Options"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
                     android:textSize="16sp" />
 
                 <Switch
                     android:id="@+id/gamingLaptop_extWarranty"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/black"
                     android:layout_marginTop="10dp"
-                    android:text="Extended Warranty" />
+                    android:text="Extended Warranty + $350.00" />
 
                 <Switch
                     android:id="@+id/gamingLaptop_mouse"
                     android:layout_width="match_parent"
+                    android:textColor="@color/black"
                     android:layout_height="wrap_content"
-                    android:text="Wireless Mouse" />
+                    android:text="Wireless Mouse + $100.00" />
 
                 <Switch
                     android:id="@+id/gamingLaptop_coolingPad"
                     android:layout_width="match_parent"
+                    android:textColor="@color/black"
                     android:layout_height="wrap_content"
-                    android:text="Cooling Pad" />
+                    android:text="Cooling Pad + $200.00" />
 
-
+                <ImageButton
+                    android:id="@+id/gamingAddToCart"
+                    android:layout_width="250dp"
+                    android:layout_height="70dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="16dp"
+                    android:adjustViewBounds="true"
+                    android:backgroundTint="#00FFFFFF"
+                    android:backgroundTintMode="src_in"
+                    android:cropToPadding="true"
+                    android:onClick="onClickAddToCartGaming"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/addtocart" />
 
             </LinearLayout>
 
@@ -390,35 +438,39 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#D2FFFFFF">
+            android:layout_height="wrap_content"
+            android:background="#D2FFFFFF"
+            android:padding="10dp">
 
             <Button
                 android:id="@+id/displayOrders_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="onClickDisplayOrders"
                 android:text="Display Orders"
-                app:layout_constraintEnd_toStartOf="@+id/completeOrder_btn"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintBottom_toTopOf="@id/clearCart_btn"
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <Button
                 android:id="@+id/completeOrder_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="onClickCompleteOrder"
                 android:text="Complete Order"
-                app:layout_constraintStart_toEndOf="@+id/displayOrders_btn"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:onClick="onClickCompleteOrder"/>
+                app:layout_constraintBottom_toTopOf="@id/clearCart_btn"/>
 
-            <ScrollView
+            <Button
+                android:id="@+id/clearCart_btn"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:onClick="onClickClearCart"
+                android:text="Clear Cart"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" />
-            </ScrollView>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
