--- a/app/src/main/res/layout/activity_complete_order.xml
+++ b/app/src/main/res/layout/activity_complete_order.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CompleteOrder"
-    android:padding="20dp">
+    android:background="#FFFFFF"
+    android:padding="20dp"
+    tools:context=".CompleteOrder">
 
     <TextView
         android:id="@+id/completeOrderHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/reviewOrder"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:textColor="@color/black"
+        android:text="@string/reviewOrderHeader"
         android:textAllCaps="true"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -24,14 +24,31 @@
         android:id="@+id/sendOrder_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClickSendOrder"
         android:text="Send Order"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
-        android:id="@+id/currentOrderDetails"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Remove, current order."/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginVertical="50dp"
+        app:layout_constraintTop_toBottomOf="@+id/completeOrderHeader">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/currentOrderDetails"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Remove, current order."
+                android:textColor="@color/black" />
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
