--- a/app/src/main/res/layout/activity_complete_order.xml
+++ b/app/src/main/res/layout/activity_complete_order.xml
@@ -18,7 +18,8 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/sendOrder_btn"
