--- a/app/src/main/res/layout/activity_browse.xml
+++ b/app/src/main/res/layout/activity_browse.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:layout_gravity="center"
             android:layout_marginBottom ="10dp">
 
             <LinearLayout
@@ -54,7 +55,7 @@
                     android:text="@string/schoolLaptopSpecsTitle"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/schoolLaptopSpecs"
@@ -62,7 +63,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/schoolLaptopSpecsText"
                     android:textColor="@color/black"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/schoolCustomizationOptionsText"
@@ -70,7 +71,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:text="@string/customizationOptionsText"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:textColor="@color/black"
                     android:textStyle="bold"/>
 
@@ -183,7 +184,7 @@
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:text="@string/workLaptopSpecsTitle"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/workLaptopSpecs"
@@ -191,7 +192,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/workLaptopSpecsText"
                     android:textColor="@color/black"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/workCustomizationOptionsText"
@@ -201,7 +202,7 @@
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:text="@string/customizationOptionsText"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <CheckBox
                     android:id="@+id/workLaptop_TouchScreenCheckbox"
@@ -321,7 +322,7 @@
                     android:textStyle="bold"
                     android:layout_marginTop="20dp"
                     android:text="@string/gamingLaptopSpecsTitle"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/gamingLaptopSpecs"
@@ -329,7 +330,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/gamingLaptopSpecsText"
                     android:textColor="@color/black"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/gamingCustomizationOptionsText"
@@ -339,7 +340,7 @@
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     android:text="@string/customizationOptionsText"
-                    android:textSize="16dp" />
+                    android:textSize="16sp" />
 
                 <CheckBox
                     android:id="@+id/gamingLaptop_WebcamCheckbox"
