--- a/app/src/main/res/layout/activity_display_orders.xml
+++ b/app/src/main/res/layout/activity_display_orders.xml
@@ -4,19 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:orientation="vertical"
-    tools:context=".DisplayOrders"
-    android:padding="20dp">
+    android:padding="20dp"
+    tools:context=".DisplayOrders">
 
     <TextView
         android:id="@+id/displayOrdersHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/displayOrdersHeader"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:textColor="@color/black"
         android:textAllCaps="true"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
